[package]
name = "tropical-projectmanager"
version = "0.2.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
fs_extra = "1.3.0"
git2 = "0.20.4"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "3.3.0", features = ["json"] }
walkdir = "2.5.0"


